--- a/Frontend/public/index.html
+++ b/Frontend/public/index.html
@@ -1,23 +1,21 @@
 <!DOCTYPE html>
-<html lang="en" >
+
+<html lang="en">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+   
     <meta
-      name="Notie App"
-      content="This is productivity app. User can create To-dos and take note in one application. Made by MachaCoder"
+      name="description"
+      content="Web site created using create-react-app"
     />
+  
+    <title>React App</title>
 
-    <title>Notie App</title>
-
-    <link rel="stylesheet" href="./general.css"/>
-    <link rel="stylesheet" href="./section1.css"/>
-    <link rel="stylesheet" href="./section2.css"/>
-    <link rel="stylesheet" href="./section3.css"/>
   </head>
-
   <body>
+    
     <div id="root"></div>
-    <script src="../src/index.jsx" type="text/jsx"></script>
+
   </body>
 </html>
